--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "submodules/vrs"]
 	path = submodules/vrs
-	url = https://github.com/ga4gh/vrs.git
-	branch = main
+	url = https://github.com/SalemBajjali/vrs.git
+	branch = vrs_serv_dev_0.0.1
